--- a/step01_basic/session_01.ipynb
+++ b/step01_basic/session_01.ipynb
@@ -117,7 +117,7 @@
     "## schema.table 생성\n",
     "- temp schema를 생성한 후, temp.users table를 작성한다. \n",
     "```sql\n",
-    "CREATE TABLE users (\n",
+    "CREATE TABLE temp.users (\n",
     "  id serial PRIMARY KEY,\n",
     "  first_name TEXT NOT NULL,\n",
     "  last_name TEXT NOT NULL,\n",
@@ -131,8 +131,152 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question\n",
-    "- "
+    "## Data Types\n",
+    "- 크게 Text, NUMERIC, BOOLEAN 형태로 구성이 됩니다. \n",
+    "\n",
+    "```sql\n",
+    "-- Create the project table\n",
+    "CREATE TABLE project (\n",
+    "\t-- Primary Key\n",
+    "\tid SERIAL PRIMARY KEY,\n",
+    "    -- franchise 기회\n",
+    "\tis_franchise BOOLEAN DEFAULT FALSE,\n",
+    "\t-- Franchise 이름\n",
+    "    franchise_name TEXT DEFAULT NULL,\n",
+    "    -- Project 시도\n",
+    "    project_state TEXT,\n",
+    "    -- Project 시군\n",
+    "    project_county TEXT,\n",
+    "    -- Project로 발생한 Job 수\n",
+    "    jobs_supported NUMERIC\n",
+    ");\n",
+    "```\n",
+    "\n",
+    "- Data Types URL: https://www.postgresql.org/docs/current/datatype.html"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "### 다양한 Text Data Types\n",
+    "\n",
+    "```sql\n",
+    "CREATE TABLE book (\n",
+    "  isbn CHAR(13) NOT NULL, \n",
+    "  author_first_name VARCHAR(50) NOT NULL, \n",
+    "  author_last_name VARCHAR(50) NOT NULL, \n",
+    "  content TEXT NOT NULL\n",
+    ");\n",
+    "```\n",
+    "\n",
+    "- Text data 타입은: TEXT, VARCHAR(N), CHAR(N) 크게 3가지 형태로 구성이 된다. \n",
+    "- TEXT\n",
+    "    + 길이를 알 수 없는 텍스트 데이터에 적합\n",
+    "- VARCHAR(N)\n",
+    "    + N은 최대 길이가 N자인 문자열만 저장하도록 열을 제한함. \n",
+    "    + N보다 글자수가 큰 값이 입력이 되면 error가 발생이 됨\n",
+    "    + 만약 N을 지정하지 않으면 TEXT와 동일하게 됨\n",
+    "- CHAR(N)\n",
+    "    + 정확하게 N 숫자만큼 글자만 들어가게 됨\n",
+    "    + isbn은 주로 출판사에서 볼 수 있는 문자열임\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Numeric Data\n",
+    "\n",
+    "```sql\n",
+    "CREATE TABLE employee (\n",
+    "  id SERIAL PRIMARY KEY, \n",
+    "  first_name VARCHAR(10) NOT NULL, \n",
+    "  last_name VARCHAR(10) NOT NULL, \n",
+    "  num_sales INTEGER\n",
+    ")\n",
+    "\n",
+    "-- Create the client table\n",
+    "CREATE TABLE client (\n",
+    "  id SERIAL PRIMARY KEY,\n",
+    "  name VARCHAR(50),\n",
+    "  site_url VARCHAR(50),\n",
+    "  num_employees SMALLINT,\n",
+    "  num_customers INTEGER\n",
+    ");\n",
+    "\n",
+    "-- Create the campaign table\n",
+    "CREATE TABLE campaign (\n",
+    "  id SERIAL PRIMARY KEY,\n",
+    "  name VARCHAR(50),\n",
+    "  budget NUMERIC(7, 2),\n",
+    "  num_days SMALLINT DEFAULT 30,\n",
+    "  goal_amount INTEGER DEFAULT 100,\n",
+    "  num_applications INTEGER DEFAULT 0\n",
+    ");\n",
+    "```\n",
+    "- Integer Types\n",
+    "    + SMALLINT\n",
+    "    + INTEGER\n",
+    "    + BIGINT\n",
+    "    + SERIAL\n",
+    "    + BIGSERIAL\n",
+    "    + DECIMAL(총자릿수, 소수점 자릿수)\n",
+    "    \n",
+    "- Floating-Point Types \n",
+    "    + DECIMAL(NUMERIC)\n",
+    "    + REAL\n",
+    "    + DOUBLE PRECISION"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BOOLEAN Data Types \n",
+    "- true \n",
+    "- false\n",
+    "- NULL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Temporal Data types\n",
+    "```sql\n",
+    "CREATE TABLE appeal (\n",
+    "\tid SERIAL PRIMARY KEY,\n",
+    "    content TEXT NOT NULL,\n",
+    "    received_on TIMESTAMP DEFAULT CURRENT_TIMESTAMP,\n",
+    "  \tapproved_on_appeal BOOLEAN DEFAULT NULL,\n",
+    "    reviewed DATE\n",
+    ");\n",
+    "```\n",
+    "- TIMESTAMP\n",
+    "- DATE\n",
+    "- TIME"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 아래 Table 정의하는 것에 대해 생각해보는 시간을 갖는다. \n",
+    "\n",
+    "```sql\n",
+    "-- Create the loan table\n",
+    "CREATE TABLE loan (\n",
+    "\tborrower_id INTEGER REFERENCES borrower(id),\n",
+    "    bank_id INTEGER REFERENCES bank(id),\n",
+    "    approval_date DATE NOT NULL DEFAULT CURRENT_DATE,\n",
+    "  \tgross_approval DECIMAL(9, 2) NOT NULL,\n",
+    "    term_in_months SMALLINT NOT NULL,\n",
+    "  \trevolver_status BOOLEAN NOT NULL DEFAULT FALSE,\n",
+    "  \tinitial_interest_rate DECIMAL(4, 2) NOT NULL\n",
+    ");\n",
+    "```"
    ]
   }
  ],
