--- a/step01_basic/session_05.ipynb
+++ b/step01_basic/session_05.ipynb
@@ -5,7 +5,66 @@
    "metadata": {},
    "source": [
     "## 실전 데이터를 활용한 응용\n",
-    "- data/summers.csv 파일을 업로드 합니다. \n"
+    "- data/summers.csv 파일을 업로드 합니다. \n",
+    "\n",
+    "### 파일 확인\n",
+    "- 먼저 summers.csv 파일가 있는지 확인합니다. \n",
+    "- 파일경로: step01_basic/data/summers.csv\n",
+    "\n",
+    "### SQL 파일 작성 \n",
+    "- SQL 파일을 아래와 같이 작성을 합니다. \n",
+    "- 파일명은 필자는 summer_medals.sql로 지정하였습니다. \n",
+    "```sql\n",
+    "-- Table: public.summer_medals\n",
+    "\n",
+    "-- DROP TABLE public.summer_medals;\n",
+    "\n",
+    "CREATE TABLE public.summer_medals\n",
+    "(\n",
+    "    year integer,\n",
+    "    city character varying(42) COLLATE pg_catalog.\"default\",\n",
+    "    sport character varying(34) COLLATE pg_catalog.\"default\",\n",
+    "    discipline character varying(34) COLLATE pg_catalog.\"default\",\n",
+    "    athlete character varying(94) COLLATE pg_catalog.\"default\",\n",
+    "    country character(6) COLLATE pg_catalog.\"default\",\n",
+    "    gender character varying(10) COLLATE pg_catalog.\"default\",\n",
+    "    event character varying(98) COLLATE pg_catalog.\"default\",\n",
+    "    medal character varying(12) COLLATE pg_catalog.\"default\"\n",
+    ")\n",
+    "\n",
+    "TABLESPACE pg_default;\n",
+    "\n",
+    "ALTER TABLE public.summer_medals\n",
+    "    OWNER to postgres;\n",
+    "\n",
+    "\\copy summer_medals(year, city, sport, discipline, athlete, country, gender, event, medal) FROM 'step01_basic/data/summer.csv' with DELIMITER ','  CSV HEADER ENCODING 'UTF8';\n",
+    "```\n",
+    "\n",
+    "- 이제 csv 파일이 잘 들어가는지 실행 및 조회를 하도록 합니다. \n",
+    "```bash \n",
+    "postgres=# \\i step01_basic/summer_medals.sql\n",
+    "CREATE TABLE\n",
+    "ALTER TABLE\n",
+    "COPY 31165\n",
+    "postgres=# SELECT * FROM summer_medals LIMIT 5;\n",
+    " year |  city  |  sport   | discipline |      athlete      | country | gender\n",
+    " |           event            | medal\n",
+    "------+--------+----------+------------+-------------------+---------+-------\n",
+    "-+----------------------------+--------\n",
+    " 1896 | Athens | Aquatics | Swimming   | HAJOS Alfred      | HUN     | Men\n",
+    " | 100M Freestyle             | Gold\n",
+    " 1896 | Athens | Aquatics | Swimming   | HERSCHMANN Otto   | AUT     | Men\n",
+    " | 100M Freestyle             | Silver\n",
+    " 1896 | Athens | Aquatics | Swimming   | DRIVAS Dimitrios  | GRE     | Men\n",
+    " | 100M Freestyle For Sailors | Bronze\n",
+    " 1896 | Athens | Aquatics | Swimming   | MALOKINIS Ioannis | GRE     | Men\n",
+    " | 100M Freestyle For Sailors | Gold\n",
+    " 1896 | Athens | Aquatics | Swimming   | CHASAPIS Spiridon | GRE     | Men\n",
+    " | 100M Freestyle For Sailors | Silver\n",
+    "(5개 행)\n",
+    "```\n",
+    "\n",
+    "- 정상적으로 csv파일이 잘 들어"
    ]
   }
  ],
