--- a/step02_summary_stats/session_01.ipynb
+++ b/step02_summary_stats/session_01.ipynb
@@ -179,6 +179,8 @@
     "\n",
     "\n",
     "## LAG() 함수의 활용\n",
+    "- Lag() 함수는 이전 행의 컬럼 값과 비교를 하거나 또는 값을 가져올 때 사용합니다. \n",
+    "- 이 때 사용하는 문법이 LAG() OVER() 구문입니다. \n",
     "\n",
     "- 우선, 200M 달리기 금메달을 확인해보도록 한다. \n",
     "\n",
@@ -228,6 +230,7 @@
     "```\n",
     "\n",
     "- 그러나, 여기에서 한걸음 더 나아가, 2연패를 달성한 선수가 있는지 확인을 해보도록 한다. \n",
+    "\n",
     "```SQL\n",
     "WITH Gold AS (\n",
     "SELECT \n",
@@ -275,7 +278,131 @@
     " 2012 | BOLT Usain                   | BOLT Usain\n",
     "(26 rows)\n",
     "\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "## Partition by\n",
+    "- Partition BY는 열의 고유 값을 기준으로 테이블을 파티션으로 분할함. \n",
+    "    - 결과가 한 열로 롤업되지 않음 \n",
+    "- 창 기능에 따라 별도로 작동됨\n",
+    "    - ROW_NUMBER가 각 파티션에 대해 재설정됩니다.\n",
+    "    - LAG는 이전 행이 동일한 파티션에 있는 경우에만 이전 값을 가져옵니다.\n",
+    "- 이름 Gender, Year, Country가 표시되도록 쿼리를 작성한다. \n",
+    "\n",
+    "```SQL\n",
+    "SELECT DISTINCT\n",
+    "    Athlete, Gender, Year, Country\n",
+    "FROM Summer_Medals\n",
+    "WHERE\n",
+    "\tYear >= 1992 AND\n",
+    "    Event = '200M' AND\n",
+    "    Medal = 'Gold' \n",
+    "ORDER BY Year;\n",
+    "         athlete         | gender | year | country\n",
+    "-------------------------+--------+------+---------\n",
+    " MARSH Michael           | Men    | 1992 | USA\n",
+    " TORRENCE Gwen           | Women  | 1992 | USA\n",
+    " JOHNSON Michael         | Men    | 1996 | USA\n",
+    " PEREC Marie-Jose        | Women  | 1996 | FRA\n",
+    " DAVIS Pauline Elaine    | Women  | 2000 | BAH\n",
+    " KENTERIS Konstantinos   | Men    | 2000 | GRE\n",
+    " CAMPBELL-BROWN Veronica | Women  | 2004 | JAM\n",
+    " CRAWFORD Shawn          | Men    | 2004 | USA\n",
+    " BOLT Usain              | Men    | 2008 | JAM\n",
+    " CAMPBELL-BROWN Veronica | Women  | 2008 | JAM\n",
+    " BOLT Usain              | Men    | 2012 | JAM\n",
+    " FELIX Allyson           | Women  | 2012 | USA\n",
+    "(12개 행)\n",
+    "\n",
+    "```\n",
+    "\n",
+    "- 위 쿼리를 근거로 하여 Partition By 문법을 적용하도록 합니다. \n",
+    "\n",
+    "```SQL\n",
+    "With Gold AS (\n",
+    "SELECT DISTINCT\n",
+    "    Gender, Year, Country\n",
+    "FROM Summer_Medals\n",
+    "WHERE\n",
+    "\tYear >= 1992 AND\n",
+    "    Event = '200M' AND\n",
+    "    Medal = 'Gold'\n",
+    ")\n",
+    "\n",
+    "SELECT \n",
+    "\tGender, Year, Country AS Currnet_Champion, \n",
+    "\tLAG(Country) OVER (PARTITION BY Gender ORDER BY Year ASC) AS Previous_Champion\n",
+    "FROM Gold\n",
+    "ORDER BY Gender ASC, Year ASC;\n",
+    "\n",
+    " gender | year | currnet_champion | previous_champion\n",
+    "--------+------+------------------+-------------------\n",
+    " Men    | 1992 | USA              |\n",
+    " Men    | 1996 | USA              | USA\n",
+    " Men    | 2000 | GRE              | USA\n",
+    " Men    | 2004 | USA              | GRE\n",
+    " Men    | 2008 | JAM              | USA\n",
+    " Men    | 2012 | JAM              | JAM\n",
+    " Women  | 1992 | USA              |\n",
+    " Women  | 1996 | FRA              | USA\n",
+    " Women  | 2000 | BAH              | FRA\n",
+    " Women  | 2004 | JAM              | BAH\n",
+    " Women  | 2008 | JAM              | JAM\n",
+    " Women  | 2012 | USA              | JAM\n",
+    "(12개 행)\n",
+    "\n",
+    "```\n",
+    "\n",
+    "- 이번에는 경기종목을 2개로 추가하도록 합니다. ('200M', '10000M')\n",
+    "    + 이 때에는 IN() 함수를 사용합니다. \n",
+    "    \n",
+    "```SQL\n",
+    "With Gold AS (\n",
+    "SELECT DISTINCT\n",
+    "    Gender, Year, Event, Country\n",
+    "FROM Summer_Medals\n",
+    "WHERE\n",
+    "\tYear >= 1992 AND\n",
+    "    Event IN('200M', '10000M') AND\n",
+    "    Medal = 'Gold'\n",
+    ")\n",
+    "\n",
+    "SELECT\n",
+    "  Gender, Year, Event,\n",
+    "  Country AS Champion,\n",
+    "  LAG(Country) OVER (PARTITION BY Gender, Event\n",
+    "                         ORDER BY Year ASC) AS Last_Champion\n",
+    "FROM Gold\n",
+    "ORDER BY Event ASC, Gender ASC, Year ASC;\n",
+    "\n",
+    " gender | year | event  | champion | last_champion\n",
+    "--------+------+--------+----------+---------------\n",
+    " Men    | 1992 | 10000M | MAR      |\n",
+    " Men    | 1996 | 10000M | ETH      | MAR\n",
+    " Men    | 2000 | 10000M | ETH      | ETH\n",
+    " Men    | 2004 | 10000M | ETH      | ETH\n",
+    " Men    | 2008 | 10000M | ETH      | ETH\n",
+    " Men    | 2012 | 10000M | GBR      | ETH\n",
+    " Women  | 1992 | 10000M | ETH      |\n",
+    " Women  | 1996 | 10000M | POR      | ETH\n",
+    " Women  | 2000 | 10000M | ETH      | POR\n",
+    " Women  | 2004 | 10000M | CHN      | ETH\n",
+    " Women  | 2008 | 10000M | ETH      | CHN\n",
+    " Women  | 2012 | 10000M | ETH      | ETH\n",
+    " Men    | 1992 | 200M   | USA      |\n",
+    " Men    | 1996 | 200M   | USA      | USA\n",
+    " Men    | 2000 | 200M   | GRE      | USA\n",
+    " Men    | 2004 | 200M   | USA      | GRE\n",
+    " Men    | 2008 | 200M   | JAM      | USA\n",
+    " Men    | 2012 | 200M   | JAM      | JAM\n",
+    " Women  | 1992 | 200M   | USA      |\n",
+    " Women  | 1996 | 200M   | FRA      | USA\n",
+    " Women  | 2000 | 200M   | BAH      | FRA\n",
+    " Women  | 2004 | 200M   | JAM      | BAH\n",
+    " Women  | 2008 | 200M   | JAM      | JAM\n",
+    " Women  | 2012 | 200M   | USA      | JAM\n",
+    "(24개 행)\n",
+    "\n",
+    "```"
    ]
   }
  ],
@@ -295,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
