--- a/step02_summary_stats/session_02.ipynb
+++ b/step02_summary_stats/session_02.ipynb
@@ -131,6 +131,7 @@
     "```\n",
     "\n",
     "- 이번에는 한국과 일본 국가만 조회될 수 있도록 쿼리를 작성한다. \n",
+    "\n",
     "```SQL\n",
     "WITH Country_Medals AS (\n",
     "  SELECT\n",
@@ -163,7 +164,43 @@
     "(8개 행)\n",
     "\n",
     "```\n",
-    "\n"
+    "\n",
+    "```SQL\n",
+    "WITH Country_Awards AS (\n",
+    "    SELECT\n",
+    "      Country,\n",
+    "      Year,\n",
+    "      COUNT(*) AS Awards\n",
+    "    FROM Summer_Medals\n",
+    "    WHERE\n",
+    "      Country IN ('FRA', 'GBR', 'GER')\n",
+    "      AND Year IN (2004, 2008, 2012)\n",
+    "      AND Medal = 'Gold'\n",
+    "    GROUP BY Country, Year)\n",
+    "\n",
+    "  SELECT\n",
+    "    Country,\n",
+    "    Year,\n",
+    "    RANK() OVER\n",
+    "      (PARTITION BY Year\n",
+    "       ORDER BY Awards DESC) :: INTEGER AS rank\n",
+    "  FROM Country_Awards\n",
+    "  ORDER BY Country ASC, Year ASC;\n",
+    "  \n",
+    " country | year | rank\n",
+    "---------+------+------\n",
+    " FRA     | 2004 |    2\n",
+    " FRA     | 2008 |    3\n",
+    " FRA     | 2012 |    3\n",
+    " GBR     | 2004 |    3\n",
+    " GBR     | 2008 |    2\n",
+    " GBR     | 2012 |    1\n",
+    " GER     | 2004 |    1\n",
+    " GER     | 2008 |    1\n",
+    " GER     | 2012 |    2\n",
+    "(9개 행)\n",
+    "\n",
+    "```\n"
    ]
   },
   {
