--- a/step02_intermediate/session_02.ipynb
+++ b/step02_intermediate/session_02.ipynb
@@ -207,11 +207,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Crosstab\n",
-    "- 예제 확인\n",
+    "## Pivot\n",
+    "- Before\n",
     "\n",
-    "```sql\n",
-    "```\n"
+    "```SQL\n",
+    "SELECT \n",
+    "\tCountry, Year, COUNT(*) AS Awards\n",
+    "FROM summer_medals\n",
+    "WHERE \n",
+    "\tCountry IN ('CHN', 'RUS', 'KOR')\n",
+    "\tAND Year IN (2008, 2012)\n",
+    "\tAND Medal = 'Gold'\n",
+    "GROUP BY Country, Year\n",
+    "ORDER BY Country ASC, Year ASC;\n",
+    " country | year | awards \n",
+    "---------+------+--------\n",
+    " CHN     | 2008 |     74\n",
+    " CHN     | 2012 |     56\n",
+    " KOR     | 2008 |     41\n",
+    " KOR     | 2012 |     18\n",
+    " RUS     | 2008 |     43\n",
+    " RUS     | 2012 |     47\n",
+    "(6 rows)\n",
+    "\n",
+    "```\n",
+    "\n",
+    "- After Pivot\n",
+    "\n",
+    "```SQL\n",
+    "SELECT * FROM CROSSTAB(\n",
+    "\t$$ WITH Country_Awards AS (\n",
+    "\t\tSELECT \n",
+    "\t\t\tCountry, Year, COUNT(*) AS Awards\n",
+    "\t\tFROM summer_medals\n",
+    "\t\tWHERE \n",
+    "\t\t\tCountry IN ('CHN', 'RUS', 'USA')\n",
+    "\t\t\tAND Year IN (2004, 2008, 2012)\n",
+    "\t\t\tAND Medal = 'Gold' AND Sport = 'Gymnastics'\n",
+    "\t\tGROUP BY Country, Year\n",
+    "\t\tORDER BY Country ASC, YEAR ASC)\n",
+    "\t\n",
+    "\t\tSELECT \n",
+    "\t\t\tCountry, Year, \n",
+    "\t\t\tRANK() OVER\n",
+    "\t\t\t(PARTITION BY Year ORDER BY Awards DESC) :: INTEGER AS Rank\n",
+    "\t\tFROM Country_Awards\n",
+    "\t\tORDER BY Country ASC, Year ASC $$) \n",
+    "AS ct(Country character(6) -- 반드시 기존 컬럼의 데이터 타입과 동일하게 작성해야 함\n",
+    "\t  , \"2004\" INTEGER\n",
+    "\t  , \"2008\" INTEGER\n",
+    "\t  , \"2012\" INTEGER);\n",
+    "            \n",
+    " country | 2004 | 2008 | 2012 \n",
+    "---------+------+------+------\n",
+    " CHN     |    3 |    1 |    1\n",
+    " RUS     |    1 |    2 |    2\n",
+    " USA     |    2 |    3 |    3\n",
+    "(3 rows)\n",
+    "\n",
+    "```"
    ]
   }
  ],
@@ -231,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.7"
   }
  },
  "nbformat": 4,
