--- a/step03_cleaning_data/session_01.ipynb
+++ b/step03_cleaning_data/session_01.ipynb
@@ -86,6 +86,110 @@
     " 0026               | SUBN              | W 126 St\n",
     " 0026               | SDN               | Saint Nicholas Ave\n",
     "(10개 행)\n",
+    "```\n",
+    "\n",
+    "### Classifying parking violations by time of day\n",
+    "- CASE WHEN 함수\n",
+    "\n",
+    "```SQL\n",
+    "SELECT \n",
+    "\tsummons_number, \n",
+    "    CASE WHEN \n",
+    "    \tsummons_number IN (\n",
+    "          SELECT \n",
+    "  \t\t\tsummons_number \n",
+    "  \t\t  FROM \n",
+    "  \t\t\tparking_violation \n",
+    "  \t\t  WHERE \n",
+    "            -- Match violation_time for morning values\n",
+    "  \t\t\tviolation_time SIMILAR TO '\\d\\d\\d\\dA'\n",
+    "    \t)\n",
+    "    THEN \n",
+    "    \t-- Value when pattern matched\n",
+    "    \t1 \n",
+    "    ELSE \n",
+    "    \t-- Value when pattern not matched\n",
+    "    \t0 \n",
+    "    END AS morning \n",
+    "FROM \n",
+    "\tparking_violation\n",
+    "LIMIT 10;\n",
+    "\n",
+    " summons_number | morning\n",
+    "----------------+---------\n",
+    " 1447152396     |       1\n",
+    " 1447152402     |       1\n",
+    " 1447152554     |       1\n",
+    " 1447152580     |       1\n",
+    " 1447152724     |       1\n",
+    " 1447152992     |       0\n",
+    " 1447153315     |       0\n",
+    " 1447153327     |       0\n",
+    " 1447153340     |       1\n",
+    " 1447153352     |       0\n",
+    "(10개 행)\n",
+    "```\n",
+    "\n",
+    "## Masking identifying information with regular expressions\n",
+    "- Regular expressions can also be used to replace patterns in strings using REGEXP_REPLACE(). The function is similar to the REPLACE() function. It's signature is REGEXP_REPLACE(source, pattern, replace, flags).\n",
+    "    + pattern is the string pattern to match in the source string.\n",
+    "    + replace is the replacement string to use in place of the pattern.\n",
+    "    + flags is an optional string used to control matching.\n",
+    "- For example, REGEXP_REPLACE(xyz, '\\d', '_', 'g') would replace any digit character (\\d) in the column xyz with an underscore (_). The g (\"global\") flag ensures every match is replaced.\n",
+    "- To protect parking violation recipients' privacy in a new web report, all letters in the plate_id column must be replaced with a dash (-) to mask the true license plate number.\n",
+    "\n",
+    "```SQL\n",
+    "SELECT \n",
+    "\tsummons_number,\n",
+    "\t-- Replace uppercase letters in plate_id with dash\n",
+    "\tREGEXP_REPLACE(plate_id, '[A-Z]', '-', 'g') \n",
+    "FROM \n",
+    "\tparking_violation;\n",
+    "    \n",
+    " summons_number | regexp_replace\n",
+    "----------------+----------------\n",
+    " 1447152396     | ---2661\n",
+    " 1447152402     | ---6523\n",
+    " 1447152554     | ---6954\n",
+    " 1447152580     | ---1641\n",
+    " 1447152724     | ---8069\n",
+    " 1447152992     | ---5242\n",
+    " 1447153315     | ---3470\n",
+    " 1447153327     | ---9640\n",
+    " 1447153340     | ---1769\n",
+    " 1447153352     | ---2184\n",
+    "(10개 행)\n",
+    "\n",
+    "```\n",
+    "\n",
+    "## Matching inconsistent color names\n",
+    "\n",
+    "```SQL\n",
+    "CREATE EXTENSION IF NOT EXISTS fuzzystrmatch;\n",
+    "\n",
+    "SELECT\n",
+    "  summons_number,\n",
+    "  vehicle_color\n",
+    "FROM\n",
+    "  parking_violation\n",
+    "WHERE\n",
+    "  -- vehicle_color SOUNDEX value matching 'GRAY' SOUNDEX value\n",
+    "  DIFFERENCE(vehicle_color, 'GRAY') = 4\n",
+    "LIMIT 10;\n",
+    "\n",
+    " summons_number | vehicle_color\n",
+    "----------------+---------------\n",
+    " 1447152396     | GRY\n",
+    " 1447153819     | GR\n",
+    " 1447155877     | GRAY\n",
+    " 1447222775     | GREY\n",
+    " 1447247929     | GR\n",
+    " 1447261707     | GRAY\n",
+    " 1447261720     | GRAY\n",
+    " 1447261781     | GRAY\n",
+    " 1447270228     | GRY\n",
+    " 1447275470     | GRAY\n",
+    "(10개 행)\n",
     "```"
    ]
   }
