--- a/step01_basic/session_02.ipynb
+++ b/step01_basic/session_02.ipynb
@@ -4,33 +4,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## pgAdmin 설치 및 서버 연결 (MacOS)\n",
-    "- GUI 프로그램을 설치해본다. \n",
-    "- Windows는 자동으로 설치가 되기 때문에 생략을 한다. \n",
-    "- 먼저 해당 싸이트에 접속을 합니다. \n",
-    "    + URL: https://www.pgadmin.org/download/\n",
-    "    \n",
-    "![](../img/pgAdmin4/install_01.png)\n",
+    "## 외래키 테이블\n",
     "\n",
-    "- macOS를 클릭한 뒤 다음 화면에서 `pgAdmin 4 v5.3` 최신버전을 다운로드 받도록 합니다. \n",
+    "- 외래키 테이블 작성 요령\n",
     "\n",
-    "![](../img/pgAdmin4/install_02.png)\n",
+    "```SQL\n",
+    "DROP TABLE IF EXISTS teacher;\n",
+    "DROP TABLE IF EXISTS subject;\n",
     "\n",
-    "- 프로그램을 설치하면 첫 화면에서 Password를 입력하도록 합니다. \n",
+    "CREATE TABLE subject (\n",
+    "\tsub_id   NUMERIC(4) NOT NULL PRIMARY KEY, \n",
+    "\tsub_name VARCHAR(60) NOT NULL\n",
+    "); \n",
     "\n",
-    "![](../img/pgAdmin4/install_03.png)\n",
+    "INSERT INTO subject VALUES \n",
+    "(0001, 'Mathematics'), \n",
+    "(0002, 'History'), \n",
+    "(0003, 'IT');\n",
     "\n",
-    "- 새로운 서버를 생성하여 서버를 등록하도록 합니다. 그 후에 이름은 LocalTest라고 정합니다. \n",
+    "CREATE TABLE teacher (\n",
+    "\tteac_id    NUMERIC(4) NOT NULL PRIMARY KEY, \n",
+    "\tteac_name  VARCHAR(20) NOT NULL, \n",
+    "\tsub_id     NUMERIC(5) REFERENCES subject, \n",
+    "\thired_date DATE\n",
+    "); \n",
     "\n",
-    "![](../img/pgAdmin4/install_04.png)\n",
+    "INSERT INTO teacher values (0011, '정선생', 0001, '2017-03-11'); -- 성공\n",
+    "INSERT INTO teacher values (0021, '박선생', 0004, '2017-05-20'); -- 실패\n",
+    "```\n",
     "\n",
-    "- 그 후에, username은 postgres를 username으로 입력하고 Postgresql을 설치할 때 설정한 password를 입력합니다. \n",
+    "```\n",
+    "---\n",
     "\n",
-    "![](../img/pgAdmin4/install_05.png)\n",
+    "알림:  \"teacher\" 테이블 없음, 무시함\n",
+    "알림:  \"subject\" 테이블 없음, 무시함\n",
     "\n",
-    "- 실제 서버에 연결 되었는지 확인하도록 합니다. \n",
+    "ERROR: 오류:  \"teacher\" 테이블에서 자료 추가, 갱신 작업이 \"teacher_sub_id_fkey\" 참조키(foreign key) 제약 조건을 위배했습니다\n",
+    "DETAIL:  (sub_id)=(4) 키가 \"subject\" 테이블에 없습니다.\n",
     "\n",
-    "![](../img/pgAdmin4/install_06.png)"
+    "\n",
+    "SQL state: 23503\n",
+    "```\n",
+    "\n",
+    "- 외래키가 여러개인 경우 \n",
+    "\n",
+    "```SQL\n",
+    "DROP TABLE IF EXISTS teacher;\n",
+    "DROP TABLE IF EXISTS subject;\n",
+    "\n",
+    "CREATE TABLE subject (\n",
+    "\tsub_id   NUMERIC(4) NOT NULL PRIMARY KEY, \n",
+    "\tsub_name VARCHAR(60) NOT NULL,\n",
+    "\tUNIQUE (sub_id, sub_name)\n",
+    "); \n",
+    "\n",
+    "INSERT INTO subject VALUES \n",
+    "(0001, 'Mathematics'), \n",
+    "(0002, 'History'), \n",
+    "(0003, 'IT');\n",
+    "\n",
+    "CREATE TABLE teacher (\n",
+    "\tteac_id    NUMERIC(4) NOT NULL PRIMARY KEY, \n",
+    "\tteac_name  VARCHAR(20) NOT NULL, \n",
+    "\tsub_code     NUMERIC(4) NOT NULL, \n",
+    "\tsub_name   VARCHAR(60) NOT NULL, \n",
+    "\thired_date DATE,  \n",
+    "\tFOREIGN KEY (sub_code, sub_name) REFERENCES subject (sub_id, sub_name)\n",
+    "); \n",
+    "\n",
+    "INSERT INTO teacher values (0011, '정선생', 0003, 'IT', '2017-03-11'); -- 성공\n",
+    "INSERT INTO teacher values (0021, '박선생', 0004, 'IT', '2017-05-20'); -- 실패\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ON DELETE 삭제\n",
+    "- "
    ]
   }
  ],
@@ -50,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
