--- a/step01_basic/session_01.ipynb
+++ b/step01_basic/session_01.ipynb
@@ -280,6 +280,20 @@
     ");\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CAST 연산자\n",
+    "- CAST 연산자는 형변환을 할 수 있는 가장 기본적인 방법이다. \n",
+    "\n",
+    "```SQL\n",
+    "CAST (표현식 AS 바꿀 데이터 타입) FROM TABLE;\n",
+    "```\n",
+    "\n",
+    "- 참고자료: https://www.postgresqltutorial.com/postgresql-cast/"
+   ]
   }
  ],
  "metadata": {
@@ -298,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
