--- a/step01_basic/session_02.ipynb
+++ b/step01_basic/session_02.ipynb
@@ -81,8 +81,205 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ON DELETE 삭제\n",
-    "- "
+    "## ON DELETE\n",
+    "- ON DELETE RESTRICT, 과목 테이블 및 교사 정보 테이블\n",
+    "\n",
+    "```SQL\n",
+    "DROP TABLE IF EXISTS teacher;\n",
+    "DROP TABLE IF EXISTS subject;\n",
+    "\n",
+    "CREATE TABLE subject (\n",
+    "\tsub_id   NUMERIC(4) NOT NULL PRIMARY KEY, \n",
+    "\tsub_name VARCHAR(60) NOT NULL\n",
+    "); \n",
+    "\n",
+    "INSERT INTO subject VALUES \n",
+    "(0001, 'Mathematics'), \n",
+    "(0002, 'History'), \n",
+    "(0003, 'IT');\n",
+    "\n",
+    "CREATE TABLE teacher (\n",
+    "\tteac_id   NUMERIC(4) NOT NULL PRIMARY KEY, \n",
+    "\tteac_name VARCHAR(20) NOT NULL, \n",
+    "\tsub_id    NUMERIC(4) REFERENCES subject ON DELETE RESTRICT, \n",
+    "\thire_date DATE\n",
+    "); \n",
+    "\n",
+    "INSERT INTO teacher values (0011, '정선생', 0001, '2017-03-11'); -- 성공\n",
+    "INSERT INTO teacher values (0021, '박선생', 0002, '2017-05-20'); -- 성공\n",
+    "INSERT INTO teacher values (0031, '김선생', 0003, '2017-04-13'); -- 성공\n",
+    "\n",
+    "DELETE FROM subject WHERE sub_id = 0002;\n",
+    "```\n",
+    "```\n",
+    "ERROR:  update or delete on table \"subject\" violates foreign key constraint \"teacher_sub_id_fkey\" on table \"teacher\"\n",
+    "DETAIL:  Key (sub_id)=(2) is still referenced from table \"teacher\".\n",
+    "SQL state: 23503\n",
+    "```\n",
+    "\n",
+    "- CASCADE 조건\n",
+    "\n",
+    "```SQL\n",
+    "DROP TABLE IF EXISTS teacher;\n",
+    "DROP TABLE IF EXISTS subject;\n",
+    "\n",
+    "CREATE TABLE subject (\n",
+    "\tsub_id   NUMERIC(4) NOT NULL PRIMARY KEY, \n",
+    "\tsub_name VARCHAR(60) NOT NULL\n",
+    "); \n",
+    "\n",
+    "INSERT INTO subject VALUES \n",
+    "(0001, 'Mathematics'), \n",
+    "(0002, 'History'), \n",
+    "(0003, 'IT');\n",
+    "\n",
+    "CREATE TABLE teacher (\n",
+    "\tteac_id   NUMERIC(4) NOT NULL PRIMARY KEY, \n",
+    "\tteac_name VARCHAR(20) NOT NULL, \n",
+    "\tsub_id    NUMERIC(4) REFERENCES subject ON DELETE CASCADE, \n",
+    "\thire_date DATE\n",
+    "); \n",
+    "\n",
+    "INSERT INTO teacher values (0011, '정선생', 0001, '2017-03-11'); -- 성공\n",
+    "INSERT INTO teacher values (0021, '박선생', 0002, '2017-05-20'); -- 성공\n",
+    "INSERT INTO teacher values (0031, '김선생', 0003, '2017-04-13'); -- 성공\n",
+    " teac_id | teac_name | sub_id | hire_date  \n",
+    "---------+-----------+--------+------------\n",
+    "      11 | 정선생    |      1 | 2017-03-11\n",
+    "      21 | 박선생    |      2 | 2017-05-20\n",
+    "      31 | 김선생    |      3 | 2017-04-13\n",
+    "(3 rows)\n",
+    "```\n",
+    "\n",
+    "- 참조된 값을 지운 다음, 다시 테이블을 불러온다. 그러면 이번에는 정상적으로 지워지는 것을 확인할 수 있다. \n",
+    "- ON DELETE CASCADE 조건은 참조한 열을 모두 지운다. \n",
+    "\n",
+    "```SQL\n",
+    "postgres=# DELETE FROM subject WHERE sub_id = 0002;\n",
+    "DELETE 1\n",
+    "postgres=# SELECT * FROM subject;\n",
+    " sub_id |  sub_name   \n",
+    "--------+-------------\n",
+    "      1 | Mathematics\n",
+    "      3 | IT\n",
+    "(2 rows)\n",
+    "postgres=# SELECT * FROM teacher;\n",
+    " teac_id | teac_name | sub_id | hire_date  \n",
+    "---------+-----------+--------+------------\n",
+    "      11 | 정선생    |      1 | 2017-03-11\n",
+    "      31 | 김선생    |      3 | 2017-04-13\n",
+    "(2 rows)\n",
+    "```\n",
+    "\n",
+    "- 이번에는 ON DELETE SET NULL 조건을 배운다. \n",
+    "\n",
+    "```SQL\n",
+    "DROP TABLE IF EXISTS teacher;\n",
+    "DROP TABLE IF EXISTS subject;\n",
+    "\n",
+    "CREATE TABLE subject (\n",
+    "\tsub_id   NUMERIC(4) NOT NULL PRIMARY KEY, \n",
+    "\tsub_name VARCHAR(60) NOT NULL\n",
+    "); \n",
+    "\n",
+    "INSERT INTO subject VALUES \n",
+    "(0001, 'Mathematics'), \n",
+    "(0002, 'History'), \n",
+    "(0003, 'IT');\n",
+    "\n",
+    "CREATE TABLE teacher (\n",
+    "\tteac_id   NUMERIC(4) NOT NULL PRIMARY KEY, \n",
+    "\tteac_name VARCHAR(20) NOT NULL, \n",
+    "\tsub_id    NUMERIC(4) REFERENCES subject ON DELETE SET NULL, \n",
+    "\thire_date DATE\n",
+    "); \n",
+    "\n",
+    "INSERT INTO teacher values (0011, '정선생', 0001, '2017-03-11'); -- 성공\n",
+    "INSERT INTO teacher values (0021, '박선생', 0002, '2017-05-20'); -- 성공\n",
+    "INSERT INTO teacher values (0031, '김선생', 0003, '2017-04-13'); -- 성공\n",
+    "\n",
+    "postgres=# DELETE FROM subject WHERE sub_id = 0002;\n",
+    "DELETE 1\n",
+    "postgres=# SELECT * FROM subject;\n",
+    " sub_id |  sub_name   \n",
+    "--------+-------------\n",
+    "      1 | Mathematics\n",
+    "      3 | IT\n",
+    "(2 rows)\n",
+    "\n",
+    "postgres=# SELECT * FROM teacher;\n",
+    " teac_id | teac_name | sub_id | hire_date  \n",
+    "---------+-----------+--------+------------\n",
+    "      11 | 정선생    |      1 | 2017-03-11\n",
+    "      31 | 김선생    |      3 | 2017-04-13\n",
+    "      21 | 박선생    |        | 2017-05-20\n",
+    "(3 rows)\n",
+    "```\n",
+    "\n",
+    "- 이번에는 ON DELETE SET DEFAULT 조건을 입력하도록 합니다. \n",
+    "\n",
+    "```SQL\n",
+    "DROP TABLE IF EXISTS teacher;\n",
+    "DROP TABLE IF EXISTS subject;\n",
+    "\n",
+    "CREATE TABLE subject (\n",
+    "\tsub_id   NUMERIC(4) NOT NULL PRIMARY KEY, \n",
+    "\tsub_name VARCHAR(60) NOT NULL\n",
+    "); \n",
+    "\n",
+    "INSERT INTO subject VALUES \n",
+    "(0001, 'Mathematics'), \n",
+    "(0002, 'History'), \n",
+    "(0003, 'IT');\n",
+    "\n",
+    "CREATE TABLE teacher (\n",
+    "\tteac_id   NUMERIC(4) NOT NULL PRIMARY KEY, \n",
+    "\tteac_name VARCHAR(20) NOT NULL, \n",
+    "\tsub_id    NUMERIC(4) DEFAULT 1 REFERENCES subject ON DELETE SET DEFAULT, \n",
+    "\thire_date DATE\n",
+    "); \n",
+    "\n",
+    "INSERT INTO teacher values (0011, '정선생', 0001, '2017-03-11'); -- 성공\n",
+    "INSERT INTO teacher values (0021, '박선생', 0002, '2017-05-20'); -- 성공\n",
+    "INSERT INTO teacher values (0031, '김선생', 0003, '2017-04-13'); -- 성공\n",
+    "\n",
+    "postgres=# DELETE FROM subject WHERE sub_id = 0002;\n",
+    "DELETE 1\n",
+    "postgres=# SELECT * FROM subject;\n",
+    " sub_id |  sub_name   \n",
+    "--------+-------------\n",
+    "      1 | Mathematics\n",
+    "      3 | IT\n",
+    "(2 rows)\n",
+    "\n",
+    "postgres=# SELECT * FROM teacher;\n",
+    " teac_id | teac_name | sub_id | hire_date  \n",
+    "---------+-----------+--------+------------\n",
+    "      11 | 정선생    |      1 | 2017-03-11\n",
+    "      31 | 김선생    |      3 | 2017-04-13\n",
+    "      21 | 박선생    |      1 | 2017-05-20\n",
+    "(3 rows)\n",
+    "```\n",
+    "\n",
+    "- Check 제약 조건이 담긴 테이블을 생성한다. \n",
+    "\n",
+    "```SQL\n",
+    "DROP TABLE IF EXISTS order_info;\n",
+    "\n",
+    "CREATE TABLE order_info(\n",
+    "\torder_no INTEGER NOT NULL PRIMARY KEY, \n",
+    "\tcust_name VARCHAR(100), \n",
+    "\tprice MONEY, \n",
+    "\torder_qty INTEGER CHECK (order_qty > 0) -- 양수만을 입력받기로 한다. \n",
+    "); \n",
+    "\n",
+    "INSERT INTO order_info values (1, '김선생', 3000, 2); -- 성공\n",
+    "INSERT INTO order_info values (2, '홍선생', 4000, -2); -- 실패\n",
+    "\n",
+    "ERROR:  new row for relation \"order_info\" violates check constraint \"order_info_order_qty_check\"\n",
+    "DETAIL:  Failing row contains (2, 홍선생, $4,000.00, -2).\n",
+    "SQL state: 23514\n",
+    "```"
    ]
   }
  ],
@@ -102,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.7"
   }
  },
  "nbformat": 4,
