--- a/step02_intermediate/session_01.ipynb
+++ b/step02_intermediate/session_01.ipynb
@@ -10,38 +10,32 @@
     "- 단, 집계 함수는 한 행으로 결괏값을 보여주는 반면, 윈도우 암수는 각 행마다 처리 결과를 출력함\n",
     "- 윈도우 함수를 사용하려면 집약함수 뒤에 OVER를 붙이고 윈도 함수를 지정합니다. \n",
     "\n",
+    "### ROW Number()\n",
+    "- 각 행에 숫자를 1, 2, 3, ..., N 형태로 추가하도록 합니다.\n",
+    "- Row_N 기준으로 오름차순으로 진행합니다.  \n",
+    "\n",
     "```SQL\n",
-    "postgres=# SELECT\n",
-    "postgres-#   *,\n",
-    "postgres-#   ROW_NUMBER() OVER() AS Row_N\n",
-    "postgres-# FROM Summer_Medals\n",
-    "postgres-# ORDER BY Row_N ASC LIMIT 10;\n",
-    " year |  city  |  sport   | discipline |       athlete        | country | gen\n",
-    "der |           event            | medal  | row_n\n",
-    "------+--------+----------+------------+----------------------+---------+----\n",
-    "----+----------------------------+--------+-------\n",
-    " 1896 | Athens | Aquatics | Swimming   | HAJOS Alfred         | HUN     | Men\n",
-    "    | 100M Freestyle             | Gold   |     1\n",
-    " 1896 | Athens | Aquatics | Swimming   | HERSCHMANN Otto      | AUT     | Men\n",
-    "    | 100M Freestyle             | Silver |     2\n",
-    " 1896 | Athens | Aquatics | Swimming   | DRIVAS Dimitrios     | GRE     | Men\n",
-    "    | 100M Freestyle For Sailors | Bronze |     3\n",
-    " 1896 | Athens | Aquatics | Swimming   | MALOKINIS Ioannis    | GRE     | Men\n",
-    "    | 100M Freestyle For Sailors | Gold   |     4\n",
-    " 1896 | Athens | Aquatics | Swimming   | CHASAPIS Spiridon    | GRE     | Men\n",
-    "    | 100M Freestyle For Sailors | Silver |     5\n",
-    " 1896 | Athens | Aquatics | Swimming   | CHOROPHAS Efstathios | GRE     | Men\n",
-    "    | 1200M Freestyle            | Bronze |     6\n",
-    " 1896 | Athens | Aquatics | Swimming   | HAJOS Alfred         | HUN     | Men\n",
-    "    | 1200M Freestyle            | Gold   |     7\n",
-    " 1896 | Athens | Aquatics | Swimming   | ANDREOU Joannis      | GRE     | Men\n",
-    "    | 1200M Freestyle            | Silver |     8\n",
-    " 1896 | Athens | Aquatics | Swimming   | CHOROPHAS Efstathios | GRE     | Men\n",
-    "    | 400M Freestyle             | Bronze |     9\n",
-    " 1896 | Athens | Aquatics | Swimming   | NEUMANN Paul         | AUT     | Men\n",
-    "    | 400M Freestyle             | Gold   |    10\n",
-    "(10개 행)\n",
-    "```\n",
+    "SELECT\n",
+    "  ROW_NUMBER() OVER() AS Row_N \n",
+    "  , *\n",
+    "FROM Summer_Medals\n",
+    "ORDER BY Row_N ASC;\n",
+    " row_n | year |  city  |  sport   | discipline |      athlete      | country | gender |           event            | medal  \n",
+    "-------+------+--------+----------+------------+-------------------+---------+--------+----------------------------+--------\n",
+    "     1 | 1896 | Athens | Aquatics | Swimming   | HAJOS Alfred      | HUN     | Men    | 100M Freestyle             | Gold\n",
+    "     2 | 1896 | Athens | Aquatics | Swimming   | HERSCHMANN Otto   | AUT     | Men    | 100M Freestyle             | Silver\n",
+    "     3 | 1896 | Athens | Aquatics | Swimming   | DRIVAS Dimitrios  | GRE     | Men    | 100M Freestyle For Sailors | Bronze\n",
+    "     4 | 1896 | Athens | Aquatics | Swimming   | MALOKINIS Ioannis | GRE     | Men    | 100M Freestyle For Sailors | Gold\n",
+    "     5 | 1896 | Athens | Aquatics | Swimming   | CHASAPIS Spiridon | GRE     | Men    | 100M Freestyle For Sailors | Silver\n",
+    "(5 rows)\n",
+    "\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "- 이번에는 올림픽 년도를 오름차순 순번대로 작성을 하도록 합니다. \n",
     "- 이 때, 중요한 건 서브쿼리로 연도만을 추출한 뒤, 윈도우 함수를 이용한 것입니다. \n",
@@ -63,34 +57,9 @@
     " 1904 |     3\n",
     " 1908 |     4\n",
     " 1912 |     5\n",
-    " 1920 |     6\n",
-    " 1924 |     7\n",
-    " 1928 |     8\n",
-    " 1932 |     9\n",
-    " 1936 |    10\n",
-    " 1948 |    11\n",
-    " 1952 |    12\n",
-    " 1956 |    13\n",
-    " 1960 |    14\n",
-    " 1964 |    15\n",
-    " 1968 |    16\n",
-    " 1972 |    17\n",
-    " 1976 |    18\n",
-    " 1980 |    19\n",
-    " 1984 |    20\n",
-    " 1988 |    21\n",
-    " 1992 |    22\n",
-    " 1996 |    23\n",
-    " 2000 |    24\n",
-    " 2004 |    25\n",
-    " 2008 |    26\n",
-    " 2012 |    27\n",
-    "(27 rows)\n",
+    "(5 rows)\n",
+    "\n",
     "```\n",
-    "\n",
-    "- 그렇다면, 서브쿼리는 무엇일까요?\n",
-    "\n",
-    "\n",
     "\n",
     "## Subquery\n",
     "- 쿼리문 안에 있는 쿼리를 의미\n",
@@ -145,9 +114,7 @@
     ") AS Years\n",
     "ORDER BY YEAR ASC \n",
     "LIMIT 5;\n",
-    "```\n",
-    "\n",
-    "\n"
+    "```"
    ]
   },
   {
