Updated: new source updated

--- a/step02_intermediate/session_01.ipynb
+++ b/step02_intermediate/session_01.ipynb
@@ -60,61 +60,7 @@
     "(5 rows)\n",
     "\n",
     "```\n",
-    "\n",
-    "## Subquery\n",
-    "- 쿼리문 안에 있는 쿼리를 의미\n",
-    "- 첫번째 쿼리문을 '메인 쿼리문'이라 부르며, 소괄호 안에 있는 쿼리문을 '서브쿼리문'이라고 함. \n",
-    "- 먼저 전체적인 코드를 확인합니다. \n",
-    "\n",
-    "```SQL\n",
-    "SELECT \n",
-    "\t*, \n",
-    "\tROW_NUMBER() OVER () AS Row_N\n",
-    "FROM summer_medals \n",
-    "WHERE year > (\n",
-    "\tSELECT AVG(year) FROM summer_medals\n",
-    ");\n",
-    " year |  city  |  sport   | discipline |         athlete         | country | gender |    event     | medal  | row_n \n",
-    "------+--------+----------+------------+-------------------------+---------+--------+--------------+--------+-------\n",
-    " 1972 | Munich | Fencing  | Fencing    | STANKOVICH Vasili       | URS     | Men    | Foil Team    | Silver |     1\n",
-    " 1972 | Munich | Aquatics | Diving     | CAGNOTTO Giorgio Franco | ITA     | Men    | 10M Platform | Bronze |     2\n",
-    " 1972 | Munich | Aquatics | Diving     | DIBIASI Klaus           | ITA     | Men    | 10M Platform | Gold   |     3\n",
-    " 1972 | Munich | Aquatics | Diving     | RYDZE Richard Anthony   | USA     | Men    | 10M Platform | Silver |     4\n",
-    " 1972 | Munich | Aquatics | Diving     | JANICKE Marina          | GDR     | Women  | 10M Platform | Bronze |     5\n",
-    "(5 rows)\n",
-    "```\n",
-    "\n",
-    "- 하나씩 보면, 다음과 같습니다. \n",
-    "- 메인 쿼리는 다음과 같습니다. \n",
-    "```SQL\n",
-    "SELECT *, ROW_NUMBER() OVER () AS Row_N FROM summer_medals WHERE year > \n",
-    "```\n",
-    "- year 구분을 하려고 하는 것입니다. year column은 숫자로 구성이 되어 있어서, 임시적으로 평균값을 구한 뒤, 평균보다 큰 year를 뽑도록 합니다. \n",
-    "- 해당되는 내용이 서브쿼리 입니다. \n",
-    "```SQL\n",
-    "SELECT AVG(year) FROM summer_medals;\n",
-    "          avg          \n",
-    "-----------------------\n",
-    " 1970.4827851756778437\n",
-    "(1 row)\n",
-    "```\n",
-    "\n",
-    "- 이번에는 아래 그림과 같이 Year, City, Row_N이 나오도록 쿼리를 작성합니다. \n",
-    "![](img/query_02.png)\n",
-    "\n",
-    "```SQL\n",
-    "SELECT \n",
-    "\tYear, \n",
-    "\tcity,\n",
-    "\tROW_NUMBER() OVER() AS Row_N\n",
-    "FROM (\n",
-    "\tSELECT DISTINCT Year, city\n",
-    "\tFROM summer_medals\n",
-    "\tORDER BY YEAR ASC\n",
-    ") AS Years\n",
-    "ORDER BY YEAR ASC \n",
-    "LIMIT 5;\n",
-    "```"
+    "\n"
    ]
   },
   {
@@ -122,7 +68,29 @@
    "metadata": {},
    "source": [
     "## ORDER BY\n",
-    "- 윈도우 function과 ORDER BY를 활용하도록 합니다. \n",
+    "- 하계 올림픽이 열린 각 연도에 번호를 할당합니다. \n",
+    "- 가장 최근 연도를 가진 행이 더 낮은 행 수를 갖도록 합니다.\n",
+    "\n",
+    "```SQL\n",
+    "SELECT\n",
+    "  Year,\n",
+    "  -- Assign the lowest numbers to the most recent years\n",
+    "  ROW_NUMBER() OVER (ORDER BY Year DESC) AS Row_N\n",
+    "FROM (\n",
+    "  SELECT DISTINCT Year\n",
+    "  FROM Summer_Medals\n",
+    ") AS Years\n",
+    "ORDER BY Year;\n",
+    "```\n",
+    "\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ORDER BY\n",
     "- 각 운동선수들이 획득한 메달 갯수를 내림차순으로 정렬하도록 합니다. \n",
     "\n",
     "```SQL\n",
@@ -133,15 +101,98 @@
     "GROUP BY Athlete\n",
     "ORDER BY Medals DESC\n",
     "LIMIT 5;\n",
-    "\n",
     "       athlete       | medals \n",
     "---------------------+--------\n",
-    " PHELPS Michael      |     44\n",
-    " LATYNINA Larisa     |     36\n",
-    " ANDRIANOV Nikolay   |     30\n",
-    " MANGIAROTTI Edoardo |     26\n",
-    " SHAKHLIN Boris      |     26\n",
+    " PHELPS Michael      |     22\n",
+    " LATYNINA Larisa     |     18\n",
+    " ANDRIANOV Nikolay   |     15\n",
+    " MANGIAROTTI Edoardo |     13\n",
+    " SHAKHLIN Boris      |     13\n",
     "(5 rows)\n",
+    "\n",
+    "```\n",
+    "- 이전 쿼리에서, 각 선수들의 랭킹을 추가하도록 합니다. \n",
+    "\n",
+    "```SQL\n",
+    "WITH Athlete_Medals AS (\n",
+    "  SELECT\n",
+    "    -- Count the number of medals each athlete has earned\n",
+    "    Athlete,\n",
+    "    COUNT(*) AS Medals\n",
+    "  FROM Summer_Medals\n",
+    "  GROUP BY Athlete)\n",
+    "\n",
+    "SELECT\n",
+    "  -- Number each athlete by how many medals they've earned\n",
+    "  Medals, \n",
+    "  Athlete,\n",
+    "  ROW_NUMBER() OVER (ORDER BY Medals DESC) AS Row_N\n",
+    "FROM Athlete_Medals\n",
+    "ORDER BY Medals DESC\n",
+    "LIMIT 5;\n",
+    " medals |       athlete       | row_n \n",
+    "--------+---------------------+-------\n",
+    "     22 | PHELPS Michael      |     1\n",
+    "     18 | LATYNINA Larisa     |     2\n",
+    "     15 | ANDRIANOV Nikolay   |     3\n",
+    "     13 | MANGIAROTTI Edoardo |     4\n",
+    "     13 | ONO Takashi         |     5\n",
+    "(5 rows)\n",
+    "\n",
+    "```\n",
+    "\n",
+    "- 남자 69KG 역도 경기에서 매년 금메달리스트 조회하도록 합니다. \n",
+    "\n",
+    "```SQL\n",
+    "SELECT\n",
+    "    -- Return each year's champions' countries\n",
+    "    Year,\n",
+    "    Country AS champion\n",
+    "  FROM Summer_Medals\n",
+    "  WHERE\n",
+    "    Discipline = 'Weightlifting' AND\n",
+    "    Event = '69KG' AND\n",
+    "    Gender = 'Men' AND\n",
+    "    Medal = 'Gold';\n",
+    " year | champion \n",
+    "------+----------\n",
+    " 2000 | BUL   \n",
+    " 2004 | CHN   \n",
+    " 2008 | CHN   \n",
+    " 2012 | CHN   \n",
+    "(4 rows)\n",
+    "```\n",
+    "\n",
+    "- 기존 쿼리에서 매년 전년도 챔피언도 같이 조회하도록 합니다. \n",
+    "\n",
+    "```SQL\n",
+    "WITH Weightlifting_Gold AS (\n",
+    "  SELECT\n",
+    "    -- Return each year's champions' countries\n",
+    "    Year,\n",
+    "    Country AS champion\n",
+    "  FROM Summer_Medals\n",
+    "  WHERE\n",
+    "    Discipline = 'Weightlifting' AND\n",
+    "    Event = '69KG' AND\n",
+    "    Gender = 'Men' AND\n",
+    "    Medal = 'Gold')\n",
+    "\n",
+    "SELECT\n",
+    "  Year, Champion,\n",
+    "  -- Fetch the previous year's champion\n",
+    "  LAG(Champion) OVER\n",
+    "    (ORDER BY Year ASC) AS Last_Champion\n",
+    "FROM Weightlifting_Gold\n",
+    "ORDER BY Year ASC;\n",
+    " year | champion | last_champion \n",
+    "------+----------+---------------\n",
+    " 2000 | BUL      | \n",
+    " 2004 | CHN      | BUL   \n",
+    " 2008 | CHN      | CHN   \n",
+    " 2012 | CHN      | CHN   \n",
+    "(4 rows)\n",
+    "\n",
     "```\n",
     "\n",
     "\n",
