--- a/step02_intermediate/session_01.ipynb
+++ b/step02_intermediate/session_01.ipynb
@@ -587,6 +587,166 @@
     "```\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ranking 함수 \n",
+    "- ROW_NUMBER()는 두 행의 값이 동일한 경우에도 항상 고유한 번호를 할당합니다.\n",
+    "- RANK() 동일한 값을 가진 행에 같은 번호를 할당하고 이러한 경우 다음 숫자를 건너뜁니다.\n",
+    "- DENSE_RANK() 값이 동일한 행에 같은 숫자를 할당하지만 다음 숫자를 건너뛰지 않습니다.\n",
+    "\n",
+    "### Example\n",
+    "- 9개 국가의 참여 횟수를 구해보도록 합니다. \n",
+    "\n",
+    "```SQL\n",
+    "SELECT \n",
+    "\tCountry, COUNT(DISTINCT Year) AS Games\n",
+    "FROM summer_medals\n",
+    "Where \n",
+    "\tCountry IN ('GBR', 'DEN', 'FRA', \n",
+    "\t\t\t    'ITA', 'AUT', 'BEL', \n",
+    "\t\t\t    'NOR', 'JPN', 'KOR')\n",
+    "GROUP BY Country\n",
+    "ORDER BY GAMES DESC;\n",
+    "```\n",
+    "```\n",
+    " country | games \n",
+    "---------+-------\n",
+    " GBR     |    27\n",
+    " DEN     |    26\n",
+    " FRA     |    26\n",
+    " ITA     |    25\n",
+    " AUT     |    24\n",
+    " BEL     |    24\n",
+    " NOR     |    22\n",
+    " JPN     |    20\n",
+    " KOR     |    15\n",
+    "(9 rows)\n",
+    "\n",
+    "```\n",
+    "\n",
+    "- 3개의 함수를 비교합니다. \n",
+    "\n",
+    "```SQL\n",
+    "WITH Country_Games AS (\n",
+    "   SELECT \n",
+    "       Country, COUNT(DISTINCT Year) AS Games\n",
+    "       FROM summer_medals\n",
+    "       Where \n",
+    "          Country IN ('GBR', 'DEN', 'FRA', \n",
+    "                              'ITA', 'AUT', 'BEL', \n",
+    "                            'NOR', 'JPN', 'KOR')\n",
+    "        GROUP BY Country\n",
+    "        ORDER BY GAMES DESC)\n",
+    "SELECT \n",
+    "     Country, Games, \n",
+    "         ROW_NUMBER()\n",
+    "\tOVER (ORDER BY Games DESC) AS Row_N,\n",
+    "         RANK()\n",
+    "\tOVER (ORDER BY Games DESC) AS Rank_N, \n",
+    "         DENSE_RANK()\n",
+    "\tOVER (ORDER BY Games DESC) AS Dense_Rank_N\n",
+    "FROM Country_Games\n",
+    "ORDER BY Games DESC, Country ASC;\n",
+    "```\n",
+    "```\n",
+    " country | games | row_n | rank_n | dense_rank_n \n",
+    "---------+-------+-------+--------+--------------\n",
+    " GBR     |    27 |     1 |      1 |            1\n",
+    " DEN     |    26 |     2 |      2 |            2\n",
+    " FRA     |    26 |     3 |      2 |            2\n",
+    " ITA     |    25 |     4 |      4 |            3\n",
+    " AUT     |    24 |     5 |      5 |            4\n",
+    " BEL     |    24 |     6 |      5 |            4\n",
+    " NOR     |    22 |     7 |      7 |            5\n",
+    " JPN     |    20 |     8 |      8 |            6\n",
+    " KOR     |    15 |     9 |      9 |            7\n",
+    "(9 rows)\n",
+    "```\n",
+    "\n",
+    "### Question 1.\n",
+    "- 메달 개수에 따라 각 선수의 순위를 매깁니다. \n",
+    "- 숫자가 높을수록, 랭킹이 높을수록, 값이 같을 경우 숫자가 동일하다.\n",
+    "\n",
+    "```SQL\n",
+    "WITH Athlete_Medals AS (\n",
+    "  SELECT\n",
+    "    Athlete,\n",
+    "    COUNT(*) AS Medals\n",
+    "  FROM Summer_Medals\n",
+    "  GROUP BY Athlete)\n",
+    "\n",
+    "SELECT\n",
+    "  Athlete,\n",
+    "  Medals,\n",
+    "  -- Rank athletes by the medals they've won\n",
+    "  RANK() OVER (ORDER BY Medals DESC) AS Rank_N\n",
+    "FROM Athlete_Medals\n",
+    "ORDER BY Medals DESC\n",
+    "LIMIT 10;\n",
+    "```\n",
+    "```\n",
+    "       athlete       | medals | rank_n \n",
+    "---------------------+--------+--------\n",
+    " PHELPS Michael      |     22 |      1\n",
+    " LATYNINA Larisa     |     18 |      2\n",
+    " ANDRIANOV Nikolay   |     15 |      3\n",
+    " MANGIAROTTI Edoardo |     13 |      4\n",
+    " ONO Takashi         |     13 |      4\n",
+    " SHAKHLIN Boris      |     13 |      4\n",
+    " THOMPSON Jenny      |     12 |      7\n",
+    " NEMOV Alexei        |     12 |      7\n",
+    " FISCHER Birgit      |     12 |      7\n",
+    " KATO Sawao          |     12 |      7\n",
+    "(10 rows)\n",
+    "\n",
+    "```\n",
+    "\n",
+    "### Question 2. \n",
+    "- 각 나라의 운동선수들을 그들이 획득한 메달의 개수로 순위를 매깁니다. \n",
+    "\n",
+    "```SQL\n",
+    "WITH Athlete_Medals AS (\n",
+    "  SELECT\n",
+    "    Country, Athlete, COUNT(*) AS Medals\n",
+    "  FROM Summer_Medals\n",
+    "  WHERE\n",
+    "    Country IN ('JPN', 'KOR')\n",
+    "    AND Year >= 2000\n",
+    "  GROUP BY Country, Athlete\n",
+    "  HAVING COUNT(*) > 1)\n",
+    "\n",
+    "SELECT\n",
+    "  Country,\n",
+    "  -- Rank athletes in each country by the medals they've won\n",
+    "  Athlete,\n",
+    "  DENSE_RANK() OVER (PARTITION BY Country\n",
+    "                         ORDER BY Medals DESC) AS Rank_N\n",
+    "FROM Athlete_Medals\n",
+    "ORDER BY Country ASC, RANK_N ASC;\n",
+    "```\n",
+    "```\n",
+    " country |     athlete      | rank_n \n",
+    "---------+------------------+--------\n",
+    " JPN     | KITAJIMA Kosuke  |      1\n",
+    " JPN     | UCHIMURA Kohei   |      2\n",
+    " .\n",
+    " .\n",
+    " JPN     | SAITO Haruka     |      5\n",
+    " JPN     | UENO Masae       |      5\n",
+    " KOR     | JIN Jongoh       |      1\n",
+    " KOR     | PARK Taehwan     |      2\n",
+    " .\n",
+    " .\n",
+    " KOR     | OH Seongok       |      4\n",
+    " KOR     | LEE Dong Soo     |      4\n",
+    " KOR     | LEE Kyungwon     |      4\n",
+    "(74 rows)\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
